# asdasfdsf

./: .gitignore  BPETokenization.ipynb  CharTokenization.ipynb  Dockerfile  MidiGeneration.ipynb  README.md  Report.md  RuGPT3_FineTuning.ipynb  RuGPT3_finetune.ipynb  WordTokenization.ipynb  docker-compose.yml  midi_utils.py  models.py  render.yaml  requirements.txt  utils.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  start-services.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  database.py  main.py  requirements.txt  stop_words.py
backend/data/: stop_words.txt  stop_words_en.txt  stop_words_ru.txt
backend/include/analyzer/: json_writer.hpp  language.hpp  ngrams.hpp  readability.hpp  stemmer.hpp  stop_words.hpp  tokenizer.hpp
backend/src/: analyzer_main.cpp  language.cpp  ngrams.cpp  readability.cpp  stemmer.cpp  stop_words.cpp  tokenizer.cpp
backend/tests/: stemmer_tests.cpp  test_api.py  test_fallback.py  tokenizer_tests.cpp
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.css  App.jsx  Comparison.jsx  index.css
frontend/src/components/: Dropzone.jsx  FiltersPanel.jsx  FreqTable.jsx  Histogram.jsx  Icon.jsx
